Implement Add Note Functionality

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="viewFragmentTitle">View Note</string>
     <string name="editFragmentTitle">Edit Note</string>
     <string name="editMenu">Edit</string>
+    <string name="action_add_note">Add Note</string>
+    <string name="createFragmentTitle">Create Note</string>
 </resources>
