--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="editMenu">Edit</string>
     <string name="action_add_note">Add Note</string>
     <string name="createFragmentTitle">Create Note</string>
+    <string name="deleteMenu">delete</string>
 </resources>
